@@ -12,6 +12,7 @@ Current git version
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
   * The 'spawn' command now prints an error message on exec failure
   * New read-only client attribute 'decoration_geometry'.
+  * New attribute 'decorated' to disable window decorations
   * The cursor shape now indicates resize options.
   * Frames can be simultaneously resized in x and y direction with the mouse.
   * Bug fixes:
